cs160/proj5/parser.output
Terminals unused in grammar

   FOR


Grammar

    0 $accept: Program $end

    1 Program: functions

    2 functions: functions function
    3          | /* empty */

    4 type: BOOLEAN
    5     | INTEGER

    6 params: params_
    7       | /* empty */

    8 params_: params_ SEMICOLON param
    9        | param

   10 param: var_list COLON type

   11 var_list: var_list COMMA IDENTIFIER
   12         | IDENTIFIER

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON type OFUNC body_of_function CFUNC

   14 body_of_function: var_declaration function_declaration statements ReturnStatement

   15 ReturnStatement: RETURN expression SEMICOLON

   16 var_declaration: /* empty */
   17                | var_declaration VAR IDENTIFIER more COLON type SEMICOLON
   18                | var_declaration VAR IDENTIFIER more COLON INTARRAY OARRAY NUMBER CARRAY SEMICOLON

   19 more: more COMMA IDENTIFIER
   20     | /* empty */

   21 function_declaration: /* empty */
   22                     | function_declaration function

   23 statements: statements Statement
   24           | /* empty */

   25 Statement: IDENTIFIER SET IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   26          | IDENTIFIER OARRAY expression CARRAY SET IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   27          | IF OPAREN expression CPAREN OFUNC statements CFUNC
   28          | IF OPAREN expression CPAREN OFUNC statements CFUNC ELSE OFUNC statements CFUNC
   29          | WHILE OPAREN expression CPAREN OFUNC statements CFUNC
   30          | IDENTIFIER SET expression SEMICOLON
   31          | IDENTIFIER OARRAY expression CARRAY SET expression SEMICOLON

   32 exprlist: /* empty */
   33         | expression moreexprlist

   34 moreexprlist: /* empty */
   35             | moreexprlist COMMA expression

   36 expression: or
   37           | expression OR or

   38 or: and
   39   | or AND and

   40 and: comp
   41    | and EQUAL comp
   42    | and NOTEQUAL comp

   43 comp: art
   44     | comp GTE art
   45     | comp GT art
   46     | comp LT art
   47     | comp LTE art

   48 art: div
   49    | art PLUS div
   50    | art MINUS div

   51 div: last
   52    | div DIVIDE last
   53    | div TIMES last

   54 last: unary

   55 unary: factor
   56      | NOT unary
   57      | MINUS unary

   58 factor: NUMBER
   59       | ZERO
   60       | BIN
   61       | HEX
   62       | OCT
   63       | TRUE
   64       | FALSE
   65       | IDENTIFIER
   66       | OPAREN expression CPAREN
   67       | ABS expression ABS
   68       | IDENTIFIER OARRAY expression CARRAY


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLEAN (258) 4
ELSE (259) 28
IF (260) 27 28
WHILE (261) 29
INTEGER (262) 5
FOR (263)
VAR (264) 17 18
FUNCTION (265) 13
INTARRAY (266) 18
RETURN (267) 15
AND (268) 39
DIVIDE (269) 52
EQUAL (270) 41
SET (271) 25 26 30 31
GTE (272) 44
GT (273) 45
LTE (274) 47
LT (275) 46
MINUS (276) 50 57
NOTEQUAL (277) 42
NOT (278) 56
OR (279) 37
PLUS (280) 49
TIMES (281) 53
TRUE (282) 63
FALSE (283) 64
NUMBER (284) 18 58
BIN (285) 60
HEX (286) 61
OCT (287) 62
ZERO (288) 59
SEMICOLON (289) 8 15 17 18 25 26 30 31
COMMA (290) 11 19 35
COLON (291) 10 13 17 18
ABS (292) 67
OFUNC (293) 13 27 28 29
CFUNC (294) 13 27 28 29
OARRAY (295) 18 26 31 68
CARRAY (296) 18 26 31 68
OPAREN (297) 13 25 26 27 28 29 66
CPAREN (298) 13 25 26 27 28 29 66
IDENTIFIER (299) 11 12 13 17 18 19 25 26 30 31 65 68


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
functions (47)
    on left: 2 3, on right: 1 2
type (48)
    on left: 4 5, on right: 10 13 17
params (49)
    on left: 6 7, on right: 13
params_ (50)
    on left: 8 9, on right: 6 8
param (51)
    on left: 10, on right: 8 9
var_list (52)
    on left: 11 12, on right: 10 11
function (53)
    on left: 13, on right: 2 22
body_of_function (54)
    on left: 14, on right: 13
ReturnStatement (55)
    on left: 15, on right: 14
var_declaration (56)
    on left: 16 17 18, on right: 14 17 18
more (57)
    on left: 19 20, on right: 17 18 19
function_declaration (58)
    on left: 21 22, on right: 14 22
statements (59)
    on left: 23 24, on right: 14 23 27 28 29
Statement (60)
    on left: 25 26 27 28 29 30 31, on right: 23
exprlist (61)
    on left: 32 33, on right: 25 26
moreexprlist (62)
    on left: 34 35, on right: 33 35
expression (63)
    on left: 36 37, on right: 15 26 27 28 29 30 31 33 35 37 66 67 68
or (64)
    on left: 38 39, on right: 36 37 39
and (65)
    on left: 40 41 42, on right: 38 39 41 42
comp (66)
    on left: 43 44 45 46 47, on right: 40 41 42 44 45 46 47
art (67)
    on left: 48 49 50, on right: 43 44 45 46 47 49 50
div (68)
    on left: 51 52 53, on right: 48 49 50 52 53
last (69)
    on left: 54, on right: 51 52 53
unary (70)
    on left: 55 56 57, on right: 54 56 57
factor (71)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 55


state 0

    0 $accept: . Program $end

    $default  reduce using rule 3 (functions)

    Program    go to state 1
    functions  go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    1 Program: functions .
    2 functions: functions . function

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 1 (Program)

    function  go to state 5


state 3

    0 $accept: Program $end .

    $default  accept


state 4

   13 function: FUNCTION . IDENTIFIER OPAREN params CPAREN COLON type OFUNC body_of_function CFUNC

    IDENTIFIER  shift, and go to state 6


state 5

    2 functions: functions function .

    $default  reduce using rule 2 (functions)


state 6

   13 function: FUNCTION IDENTIFIER . OPAREN params CPAREN COLON type OFUNC body_of_function CFUNC

    OPAREN  shift, and go to state 7


state 7

   13 function: FUNCTION IDENTIFIER OPAREN . params CPAREN COLON type OFUNC body_of_function CFUNC

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 7 (params)

    params    go to state 9
    params_   go to state 10
    param     go to state 11
    var_list  go to state 12


state 8

   12 var_list: IDENTIFIER .

    $default  reduce using rule 12 (var_list)


state 9

   13 function: FUNCTION IDENTIFIER OPAREN params . CPAREN COLON type OFUNC body_of_function CFUNC

    CPAREN  shift, and go to state 13


state 10

    6 params: params_ .
    8 params_: params_ . SEMICOLON param

    SEMICOLON  shift, and go to state 14

    $default  reduce using rule 6 (params)


state 11

    9 params_: param .

    $default  reduce using rule 9 (params_)


state 12

   10 param: var_list . COLON type
   11 var_list: var_list . COMMA IDENTIFIER

    COMMA  shift, and go to state 15
    COLON  shift, and go to state 16


state 13

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN . COLON type OFUNC body_of_function CFUNC

    COLON  shift, and go to state 17


state 14

    8 params_: params_ SEMICOLON . param

    IDENTIFIER  shift, and go to state 8

    param     go to state 18
    var_list  go to state 12


state 15

   11 var_list: var_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 19


state 16

   10 param: var_list COLON . type

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 22


state 17

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON . type OFUNC body_of_function CFUNC

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 23


state 18

    8 params_: params_ SEMICOLON param .

    $default  reduce using rule 8 (params_)


state 19

   11 var_list: var_list COMMA IDENTIFIER .

    $default  reduce using rule 11 (var_list)


state 20

    4 type: BOOLEAN .

    $default  reduce using rule 4 (type)


state 21

    5 type: INTEGER .

    $default  reduce using rule 5 (type)


state 22

   10 param: var_list COLON type .

    $default  reduce using rule 10 (param)


state 23

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON type . OFUNC body_of_function CFUNC

    OFUNC  shift, and go to state 24


state 24

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON type OFUNC . body_of_function CFUNC

    $default  reduce using rule 16 (var_declaration)

    body_of_function  go to state 25
    var_declaration   go to state 26


state 25

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON type OFUNC body_of_function . CFUNC

    CFUNC  shift, and go to state 27


state 26

   14 body_of_function: var_declaration . function_declaration statements ReturnStatement
   17 var_declaration: var_declaration . VAR IDENTIFIER more COLON type SEMICOLON
   18                | var_declaration . VAR IDENTIFIER more COLON INTARRAY OARRAY NUMBER CARRAY SEMICOLON

    VAR  shift, and go to state 28

    $default  reduce using rule 21 (function_declaration)

    function_declaration  go to state 29


state 27

   13 function: FUNCTION IDENTIFIER OPAREN params CPAREN COLON type OFUNC body_of_function CFUNC .

    $default  reduce using rule 13 (function)


state 28

   17 var_declaration: var_declaration VAR . IDENTIFIER more COLON type SEMICOLON
   18                | var_declaration VAR . IDENTIFIER more COLON INTARRAY OARRAY NUMBER CARRAY SEMICOLON

    IDENTIFIER  shift, and go to state 30


state 29

   14 body_of_function: var_declaration function_declaration . statements ReturnStatement
   22 function_declaration: function_declaration . function

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 24 (statements)

    function    go to state 31
    statements  go to state 32


state 30

   17 var_declaration: var_declaration VAR IDENTIFIER . more COLON type SEMICOLON
   18                | var_declaration VAR IDENTIFIER . more COLON INTARRAY OARRAY NUMBER CARRAY SEMICOLON

    $default  reduce using rule 20 (more)

    more  go to state 33


state 31

   22 function_declaration: function_declaration function .

    $default  reduce using rule 22 (function_declaration)


state 32

   14 body_of_function: var_declaration function_declaration statements . ReturnStatement
   23 statements: statements . Statement

    IF          shift, and go to state 34
    WHILE       shift, and go to state 35
    RETURN      shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    ReturnStatement  go to state 38
    Statement        go to state 39


state 33

   17 var_declaration: var_declaration VAR IDENTIFIER more . COLON type SEMICOLON
   18                | var_declaration VAR IDENTIFIER more . COLON INTARRAY OARRAY NUMBER CARRAY SEMICOLON
   19 more: more . COMMA IDENTIFIER

    COMMA  shift, and go to state 40
    COLON  shift, and go to state 41


state 34

   27 Statement: IF . OPAREN expression CPAREN OFUNC statements CFUNC
   28          | IF . OPAREN expression CPAREN OFUNC statements CFUNC ELSE OFUNC statements CFUNC

    OPAREN  shift, and go to state 42


state 35

   29 Statement: WHILE . OPAREN expression CPAREN OFUNC statements CFUNC

    OPAREN  shift, and go to state 43


state 36

   15 ReturnStatement: RETURN . expression SEMICOLON

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 56
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 37

   25 Statement: IDENTIFIER . SET IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   26          | IDENTIFIER . OARRAY expression CARRAY SET IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   30          | IDENTIFIER . SET expression SEMICOLON
   31          | IDENTIFIER . OARRAY expression CARRAY SET expression SEMICOLON

    SET     shift, and go to state 65
    OARRAY  shift, and go to state 66


state 38

   14 body_of_function: var_declaration function_declaration statements ReturnStatement .

    $default  reduce using rule 14 (body_of_function)


state 39

   23 statements: statements Statement .

    $default  reduce using rule 23 (statements)


state 40

   19 more: more COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 67


state 41

   17 var_declaration: var_declaration VAR IDENTIFIER more COLON . type SEMICOLON
   18                | var_declaration VAR IDENTIFIER more COLON . INTARRAY OARRAY NUMBER CARRAY SEMICOLON

    BOOLEAN   shift, and go to state 20
    INTEGER   shift, and go to state 21
    INTARRAY  shift, and go to state 68

    type  go to state 69


state 42

   27 Statement: IF OPAREN . expression CPAREN OFUNC statements CFUNC
   28          | IF OPAREN . expression CPAREN OFUNC statements CFUNC ELSE OFUNC statements CFUNC

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 70
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 43

   29 Statement: WHILE OPAREN . expression CPAREN OFUNC statements CFUNC

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 71
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 44

   57 unary: MINUS . unary

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    unary   go to state 72
    factor  go to state 64


state 45

   56 unary: NOT . unary

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    unary   go to state 73
    factor  go to state 64


state 46

   63 factor: TRUE .

    $default  reduce using rule 63 (factor)


state 47

   64 factor: FALSE .

    $default  reduce using rule 64 (factor)


state 48

   58 factor: NUMBER .

    $default  reduce using rule 58 (factor)


state 49

   60 factor: BIN .

    $default  reduce using rule 60 (factor)


state 50

   61 factor: HEX .

    $default  reduce using rule 61 (factor)


state 51

   62 factor: OCT .

    $default  reduce using rule 62 (factor)


state 52

   59 factor: ZERO .

    $default  reduce using rule 59 (factor)


state 53

   67 factor: ABS . expression ABS

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 74
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 54

   66 factor: OPAREN . expression CPAREN

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 75
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 55

   65 factor: IDENTIFIER .
   68       | IDENTIFIER . OARRAY expression CARRAY

    OARRAY  shift, and go to state 76

    $default  reduce using rule 65 (factor)


state 56

   15 ReturnStatement: RETURN expression . SEMICOLON
   37 expression: expression . OR or

    OR         shift, and go to state 77
    SEMICOLON  shift, and go to state 78


state 57

   36 expression: or .
   39 or: or . AND and

    AND  shift, and go to state 79

    $default  reduce using rule 36 (expression)


state 58

   38 or: and .
   41 and: and . EQUAL comp
   42    | and . NOTEQUAL comp

    EQUAL     shift, and go to state 80
    NOTEQUAL  shift, and go to state 81

    $default  reduce using rule 38 (or)


state 59

   40 and: comp .
   44 comp: comp . GTE art
   45     | comp . GT art
   46     | comp . LT art
   47     | comp . LTE art

    GTE  shift, and go to state 82
    GT   shift, and go to state 83
    LTE  shift, and go to state 84
    LT   shift, and go to state 85

    $default  reduce using rule 40 (and)


state 60

   43 comp: art .
   49 art: art . PLUS div
   50    | art . MINUS div

    MINUS  shift, and go to state 86
    PLUS   shift, and go to state 87

    $default  reduce using rule 43 (comp)


state 61

   48 art: div .
   52 div: div . DIVIDE last
   53    | div . TIMES last

    DIVIDE  shift, and go to state 88
    TIMES   shift, and go to state 89

    $default  reduce using rule 48 (art)


state 62

   51 div: last .

    $default  reduce using rule 51 (div)


state 63

   54 last: unary .

    $default  reduce using rule 54 (last)


state 64

   55 unary: factor .

    $default  reduce using rule 55 (unary)


state 65

   25 Statement: IDENTIFIER SET . IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   30          | IDENTIFIER SET . expression SEMICOLON

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 90

    expression  go to state 91
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 66

   26 Statement: IDENTIFIER OARRAY . expression CARRAY SET IDENTIFIER OPAREN exprlist CPAREN SEMICOLON
   31          | IDENTIFIER OARRAY . expression CARRAY SET expression SEMICOLON

    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    NUMBER      shift, and go to state 48
    BIN         shift, and go to state 49
    HEX         shift, and go to state 50
    OCT         shift, and go to state 51
    ZERO        shift, and go to state 52
    ABS         shift, and go to state 53
    OPAREN      shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    expression  go to state 92
    or          go to state 57
    and         go to state 58
    comp        go to state 59
    art         go to state 60
    div         go to state 61
    last        go to state 62
    unary       go to state 63
    factor      go to state 64


state 67

   19 more: more COMMA IDENTIFIER .

    $default  reduce using rule 19 (more)


state 68
